# EduTrust_origin

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AWS_INTEGRATION_GUIDE.md  Dockerfile  README.md  README_DEPLOY.md  amplify.yml  bootstrap.sh  codecov.yml  git_commits.txt  worker.js  wrangler.toml
backend/: .env.example  .gitignore  README.md  debug_check.py  delete_user.py  evaluate_rag.py  exam_test.py  pyproject.toml  resync_s3.py  test_dataset.json  test_ngrok.py  test_tools.py  test_ws.py
backend/config/: agents.yaml  llms.yaml
backend/src/: app_config.py  database.py  db.py  deps.py  llm.py  logger.py  main.py  migrate.py  models.py  prompt_lib.py  prompt_template.py  redis_client.py  state.py  streaming.py  utils.py
backend/src/agent/: tools.py  unified_agent.py
backend/src/auth/: auth_utils.py  cognito_auth.py  dependencies.py  email_service.py  jwt_handler.py  otp_storage.py  session_handler.py
backend/src/aws/: __init__.py  s3_service.py
backend/src/conversation/: conversation_cache.py  conversation_constants.py  conversation_handler.py  conversation_handler_dynamodb.py
backend/src/crew/: agents.py  orchestrator.py  tools.py
backend/src/database/: __init__.py  class_handler.py  db_handler.py  dynamodb_client.py  dynamodb_facade.py  exam_handler.py  mongo_client.py  redis_client.py
backend/src/detection/: camera_service.py  object_detection.py  screenshot_utils.py  violation_logger.py
backend/src/document_handler/: document_handler.py
backend/test/: conftest.py
backend/tests/: conftest.py  websocket_test.html
(+174 files in other folders)
