[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.3"
dependencies = [
    "crewai>=1.8.1",
    "fastapi>=0.128.0",
    "mem0ai>=0.1.116",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.40.0",
]
